// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot of component rendered with actionText 1`] = `
<body>
  <div>
    <div
      class="exchange__column "
    >
      <div
        class="form-block "
      >
        <label
          class="form-block__label"
        >
          <span>
            Test
          </span>
        </label>
        <div
          class="form-block__box"
        >
          <input
            aria-label="input"
            class="form-block__input form-control"
            value=""
          />
          <div
            class="form-block__unit action-text"
          >
            MAX
          </div>
        </div>
      </div>
    </div>
    <div
      class="tooltipster-base tooltipster-sidetip tooltipster-0 fff tooltipster-fade tooltipster-dying"
      style="position: absolute; max-width: 0px; max-height: 0px; z-index: 99; top: 0px; left: 0px; animation-duration: 350ms; transition-duration: 350ms;"
    >
      <div
        class="tooltipster-box"
      >
        <div
          class="tooltipster-content"
        />
      </div>
      <div
        class="tooltipster-arrow"
        style="left: 0px;"
      >
        <div
          class="tooltipster-arrow-uncropped"
        >
          <div
            class="tooltipster-arrow-border"
          />
          <div
            class="tooltipster-arrow-background"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`snapshot of component rendered with hint 1`] = `
<body>
  <div>
    <div
      class="exchange__column "
    >
      <div
        class="form-block "
      >
        <label
          class="form-block__label"
        >
          <span>
            Test
          </span>
          <span
            class="tooltip-help"
          >
            <svg
              class="icon icon-question"
            >
              <use
                xlink:href="icons.svg#icon-question"
              />
            </svg>
          </span>
        </label>
        <div
          class="form-block__box"
        >
          <input
            aria-label="input"
            class="form-block__input form-control"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="tooltipster-base tooltipster-sidetip tooltipster-0 fff tooltipster-fade tooltipster-dying"
      style="position: absolute; max-width: 0px; max-height: 0px; z-index: 99; top: 0px; left: 0px; animation-duration: 350ms; transition-duration: 350ms;"
    >
      <div
        class="tooltipster-box"
      >
        <div
          class="tooltipster-content"
        >
          <span>
            Hint
          </span>
        </div>
      </div>
      <div
        class="tooltipster-arrow"
        style="left: 0px;"
      >
        <div
          class="tooltipster-arrow-uncropped"
        >
          <div
            class="tooltipster-arrow-border"
          />
          <div
            class="tooltipster-arrow-background"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`snapshot of component rendered with label 1`] = `
<body>
  <div>
    <div
      class="exchange__column "
    >
      <div
        class="form-block "
      >
        <label
          class="form-block__label"
        >
          <span>
            Test
          </span>
        </label>
        <div
          class="form-block__box"
        >
          <input
            aria-label="input"
            class="form-block__input form-control"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="tooltipster-base tooltipster-sidetip tooltipster-0 fff tooltipster-fade tooltipster-dying"
      style="position: absolute; max-width: 0px; max-height: 0px; z-index: 99; top: 0px; left: 0px; animation-duration: 350ms; transition-duration: 350ms;"
    >
      <div
        class="tooltipster-box"
      >
        <div
          class="tooltipster-content"
        />
      </div>
      <div
        class="tooltipster-arrow"
        style="left: 0px;"
      >
        <div
          class="tooltipster-arrow-uncropped"
        >
          <div
            class="tooltipster-arrow-border"
          />
          <div
            class="tooltipster-arrow-background"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`snapshot of component rendered with no label 1`] = `
<body>
  <div>
    <div
      class="exchange__column "
    >
      <div
        class="form-block "
      >
        <div
          class="form-block__box"
        >
          <input
            aria-label="input"
            class="form-block__input form-control"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="tooltipster-base tooltipster-sidetip tooltipster-0 fff tooltipster-fade tooltipster-dying"
      style="position: absolute; max-width: 0px; max-height: 0px; z-index: 99; top: 0px; left: 0px; animation-duration: 350ms; transition-duration: 350ms;"
    >
      <div
        class="tooltipster-box"
      >
        <div
          class="tooltipster-content"
        />
      </div>
      <div
        class="tooltipster-arrow"
        style="left: 0px;"
      >
        <div
          class="tooltipster-arrow-uncropped"
        >
          <div
            class="tooltipster-arrow-border"
          />
          <div
            class="tooltipster-arrow-background"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`snapshot of component rendered with svgIcon 1`] = `
<body>
  <div>
    <div
      class="exchange__column "
    >
      <div
        class="form-block "
      >
        <label
          class="form-block__label"
        >
          <span>
            Test
          </span>
        </label>
        <div
          class="form-block__box"
        >
          <input
            aria-label="input"
            class="form-block__input form-control"
            value=""
          />
          <div
            class="form-block__icon"
          >
            <svg>
              <symbol
                id="icon-clock"
                viewBox="0 0 47 47"
              >
                <circle
                  cx="23.5"
                  cy="23.5"
                  r="22"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
                <path
                  d="M23.5 9.5V23.5H37.5"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </symbol>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="tooltipster-base tooltipster-sidetip tooltipster-0 fff tooltipster-fade tooltipster-dying"
      style="position: absolute; max-width: 0px; max-height: 0px; z-index: 99; top: 0px; left: 0px; animation-duration: 350ms; transition-duration: 350ms;"
    >
      <div
        class="tooltipster-box"
      >
        <div
          class="tooltipster-content"
        />
      </div>
      <div
        class="tooltipster-arrow"
        style="left: 0px;"
      >
        <div
          class="tooltipster-arrow-uncropped"
        >
          <div
            class="tooltipster-arrow-border"
          />
          <div
            class="tooltipster-arrow-background"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
